--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HotelSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "DbContextConnection": "Server=LAPTOP-8P1HR1QG;Database=HotelDB;Trusted_Connection=True;TrustServerCertificate=True;" //zmienic na wlasna
+    }
 }
