Bugfix błędu z logowaniem admina

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DbContextConnection": "Server=localhost;Database=HotelTest;Trusted_Connection=True;TrustServerCertificate=True;" //zmienic na wlasna
+        "DbContextConnection": "Server=LAPTOP-8P1HR1QG;Database=HotelTest;Trusted_Connection=True;TrustServerCertificate=True;" //zmienic na wlasna
     }
 }
