Fix - zmiana etykiet na polski; do zmiany jeszcze wszystko w zarządzaniu kontem.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DbContextConnection": "Server=localhost;Database=HotelTest2;Trusted_Connection=True;TrustServerCertificate=True;" //zmienic na wlasna
+        "DbContextConnection": "Server=localhost;Database=HotelDB;Trusted_Connection=True;TrustServerCertificate=True;" //zmienic na wlasna
     }
 }
